<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/layout_common_title_bar" />

    <LinearLayout
        android:id="@+id/layout_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title_bar"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="70dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_mobile_number"
                style="@style/et_input_style"
                android:drawableLeft="@drawable/ic_launcher"
                android:hint="@string/login_account_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_sms_code"
                style="@style/et_input_style"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_launcher"
                android:hint="@string/sms_code_hint"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_login_code"
                android:layout_width="80dp"
                android:layout_height="26dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/btn_login_shape"
                android:layout_gravity="center"
                android:text="@string/send_sms_code"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_pwd"
                style="@style/et_input_style"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_launcher"
                android:hint="@string/update_login_pwd_hint"
                android:inputType="text"
                android:maxLength="16"
                android:password="true"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- 设置新的登录密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_pwd_again"
                style="@style/et_input_style"
                android:drawableLeft="@drawable/ic_launcher"
                android:hint="@string/update_login_pwd_hint_again"
                android:inputType="text"
                android:lines="1"
                android:maxLength="16"
                android:password="true"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sure"
            style="@style/button_orange"
            android:layout_marginTop="45dp"
            android:text="@string/sure"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>