<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="登录"
        android:textColor="#474747"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/icon_close" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/iv_close"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_app_logo"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <com.zyjr.emergencylending.custom.ClearEditText
                android:id="@+id/et_phone_number"
                style="@style/et_input_style"
                android:drawableLeft="@drawable/ic_launcher"
                android:drawableRight="@mipmap/login_delete"
                android:hint="@string/login_account_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_shape"
            android:orientation="horizontal">

            <com.zyjr.emergencylending.custom.ClearEditText
                android:id="@+id/et_password"
                style="@style/et_input_style"
                android:drawableLeft="@drawable/ic_launcher"
                android:drawableRight="@mipmap/login_delete"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="18dp"
                android:layout_height="14.5dp"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:background="@mipmap/ic_launcher" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/button_orange"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:text="@string/login"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/forget_password"
                android:textColor="@color/front_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/register"
                android:textColor="@color/front_text_color"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/layout_warm_notice" />

</RelativeLayout>